URL changes, detect_i2c hack

--- a/html/sta_update.html
+++ b/html/sta_update.html
@@ -58,6 +58,6 @@ $('#btn_submit').click(function(e){
   xhr.send(fd);
 });
 </script>
-<script src=https://ui.opensprinkler.com/js/hasher.js></script>
+<script src=http://www.yzo.nhely.hu/opensprinkler/js/hasher.js></script>
 </body>
 
